--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "objection": "^3.1.5",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "uuid": "^11.1.0"
   },
   "test": "echo \"Error: no test specified\" && exit 1",
   "name": "sms-backend-api",
@@ -24,8 +25,10 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.4",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
