--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
